# fastapi-init

./: Makefile  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
documentation/: mkdocs.yml
documentation/docs/: examples.md  index.md
nginx/: nginx.conf
